[gd_scene load_steps=2 format=3 uid="uid://c2lp22p3ws3ob"]

[ext_resource type="Script" uid="uid://d37yf3mej8qy4" path="res://code/ui/round_screen.gd" id="1_4jvcv"]

[node name="RoundScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4jvcv")
id = &"round_screen"
metadata/_custom_type_script = "uid://bt1wwjwsr1i2v"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(650, 370)
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 645.0
offset_bottom = 365.0
theme_type_variation = &"MenuBackPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="v_spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="round_text" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"RoundTitle"
text = "Round %s Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="v_spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="v_spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="bottom" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 0

[node name="h_spacer" type="Control" parent="VBoxContainer/bottom"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="continue_button" type="Button" parent="VBoxContainer/bottom"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Contiue"

[node name="h_spacer2" type="Control" parent="VBoxContainer/bottom"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="v_spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
